# CopyBuildedFiles

./: .gitignore  CMakeLists.txt  StdAfx.h  main.cpp  settings.json  src2pdf  stdafx.cpp
include/CopyBuildedFiles/: CopyBuildedFiles.hpp
include/CopyProgramFiles/: CopyProgramFiles.hpp
src/: CopyBuildedFiles.cpp  CopyProgramFiles.cpp  utils.cpp
